--- a/css/main.css
+++ b/css/main.css
@@ -1266,7 +1266,7 @@ img {
   top: 0px;
   z-index: 99;
   width: 100%;
-  background-color: #0d1328;
+  background-color: #020612;
   transition: all 500ms ease;
   -moz-transition: all 500ms ease;
   -webkit-transition: all 500ms ease;
