--- a/css/main.css
+++ b/css/main.css
@@ -974,6 +974,7 @@ img {
   line-height: 30px;
   text-transform: capitalize;
   letter-spacing: 0px;
+  padding: 0 5px;
   opacity: 1;
   overflow: hidden;
   font-weight: 400;
@@ -1745,7 +1746,7 @@ img {
 
 .about-section .content-column .inner-column {
   position: relative;
-  padding-top: 140px;
+  padding-top: 50px;
   padding-left: 65px;
 }
 
@@ -3200,6 +3201,7 @@ img {
 .talk-section .title-column {
   position: relative;
   margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .talk-section .title-column .inner-column {
@@ -3250,7 +3252,8 @@ img {
   color: #161616;
   font-size: 18px;
   line-height: 1.8em;
-  margin-bottom: 45px;
+  margin-bottom: 40px;
+  margin-top: 20px;
 }
 
 .talk-section .form-column .pattern-layer {
@@ -5377,4 +5380,12 @@ img {
 
 .bottom-spacing {
   margin-bottom: 50px;
+}
+
+.error-img {
+  max-width: 330px;
+}
+
+.dec-none {
+  text-decoration: none;
 }
