--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,11 @@ img {
   text-align: center;
 }
 
+/*Hide Google reCAPTCHA badge*/
+.captcha {
+  margin-bottom: 30px;
+}
+
 /*Btn Style One*/
 
 .btn-style-one {
